=======
CHANGES
=======

3.6.0 (unreleased)

- Abstract out the template engine and program interfaces and allow
  implementation replacement via a utility component registration.

3.5.3 (unreleased)
------------------

- Removed ancient copyright from test files (LP: #607228)

3.5.2 (2010-07-08)
------------------

- Fixed PTRuntimeError exception messages to be consistent across Python
  versions, and compatibile with the output under Python 2.4.  (More
  readable than the previous output under Python 2.6 as well.)

3.5.1 (2010-04-30)
------------------

- Removed use of 'zope.testing.doctestunit' in favor of stdlib's doctest.

- Added dependency on "zope.security [untrustedpython]" because the 'engine'
  module uses it.

3.5.0 (2009-05-25)
------------------

- Added test coverage reporting support.

- Moved 'engine' module and related test scaffolding here from
  ``zope.app.pagetemplate`` package.

3.4.2 (2009-03-17)
------------------

- Remove old zpkg-related DEPENDENCIES.cfg file.

- Change package's mailing list address to zope-dev at zope.org, as
  zope3-dev at zope.org is now retired.

- Change `cheeseshop` to `pypi` in the packages' homepage url.

3.4.1 (2009-01-27)
------------------

- Fix test due to recent changes in zope.tal.


3.4.0 (2007-10-02)
------------------

- Initial release independent of the Zope 3 tree.


3.2.0 (2006-01-05)
------------------

- Corresponds to the version of the zope.pagetemplate package shipped
  as part of the Zope 3.2.0 release.

- ZPTPage macro expansion:  changed label text to match the corresponding
  label in Zope 2 and activated the name spaces for macro expansion
  in 'read'.  See http://www.zope.org/Collectors/Zope3-dev/199

- Coding style cleanups.


3.1.0 (2005-10-03)
------------------

- Corresponds to the version of the zope.pagetemplate package shipped
  as part of the Zope 3.1.0 release.

- Fixed apidoc and Cookie, which were using wrong descriptor class